fixed overflow of contact

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -135,9 +135,10 @@
         width: 70%;
     }
 
-    #form-wrapper {
-        width: 110%;
+    #contact-form {
+        width: 75%;
     }
+
 
 }
 
@@ -146,12 +147,12 @@
         width: 80%;
     }
 
-    #form-wrapper {
-        width: 120%;
-    }
-
     #mainContact {
         padding-bottom: 100px;
+    }
+
+    #contact-form {
+        width: 85%;
     }
 
 }
@@ -161,9 +162,11 @@
         width: 90%;
     }
 
-    #form-wrapper {
-        width: 140%;
+    #contact-form {
+        width: 95%;
     }
+
+
 
 
 
